# VirgilServer

./: .gitignore  README.md  main.py  pyproject.toml  server.py
lib/: api.py  logger.py  model.py  request_module.py  try.py  vectorizer.py
test/: test_locust.py
