#FIRST INSTALL POETRY


# ---- STANDARD CONFIG ----
[project]
name = "Virgil-server"
description = "Virgil-server is a part of VirgilAI on a server for the models of comprensioh phrase."
version = "v1.0.0"
readme = "README.md"
requires-python = ">=3.10,<3.13"

[project.license]
file = "LICENSE"

# ------ CONFIG FOR POETRY ------
[tool.poetry]
name = "Virgil-server"
version = "1.0.0"
description = "Virgil-server is a part of VirgilAI on a server for the models of comprensioh phrase."
authors = [" <Retr0.projectvirgilai@gmail.com> "]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "0.105.0"
uvicorn = "^0.15.0"
colorama = "^0.4.6"
requests = "^2.31.0"
tomli = "^2.0.1"
tomlkit = "^0.12.1"
aiohttp = "^3.8.6"
numpy = "^1.26.2"
nltk = "^3.8.1"
joblib = "^1.3.2"
scipy = "1.11.3"
scikit-learn = "1.3.2"
gensim = "^4.3.2"


[tool.debug]
level_debug = "info" # (debug,info,warning,error,critical)
logs_file = false

[tool.poetry.dev-dependencies]
ruff = "^0.0.292"
coverage = "^7.3.2"
pytest = "^7.4.3"

# ------ CONFIG OF RUFF  --------
[tool.ruff]
ignore = ["E501"]
extend-include = ["*.pyw"]
select = ["E","F","N","D","UP","PYI","SLOT","SIM","TD","FIX","W","PL"]
exclude = [
    ".git",
    ".git-rewrite",
    ".venv",
    "__pypackages__",
    "venv",
]
respect-gitignore = true
target-version = "py311"

[tool.ruff.pydocstyle]
convention = "google"
